--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
     --color-background-nav:#161B22;
     --color-background-home:#0D1117;
     --color-text-light:#EDEDED;
-    --color-text-title:#FF5555;
+    --color-text-title:#1a1c92;
     --color-text-dark:#3D3D3D;
 }
 
@@ -34,9 +34,15 @@ a:hover {
 
 main {
     width: 100%;
-    height: calc(100vh - 120px);
+    min-height: calc(100vh - 120px);
     display: flex;
     flex-direction: column;
+}
+
+h1{
+    color: var(--color-text-title);
+    margin: 40px 0;
+    font-size: 30px;
 }
 
 
